--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             vulnerability management, vulnerability research, vulnerability,
             SRE, site reliability engineering, IT security, computer security,
             information technology security, specialist">
-        <meta name="description" content="Engineering software solutions to enhance the cyber security of your business.">
+        <meta name="description" content="Engineering software systems to keep the computer applications, networks and infrastructure secure, and to prevent information leaks.">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
@@ -59,9 +59,9 @@
                     <small>MSc* - Master of Science</small>
                 </div>
                 <section>
-                    <p>I'm an cyber security and software engineering specialist holding engineering master's degree in <span class="strong">business IT</span>, and a candidate for master's degree of science in <span class="strong">cyber security</span>. I specialize in</p>
+                    <p>I'm a cyber security and software engineering specialist holding an engineering master's degree in <span class="strong">business IT</span>, and a candidate for master's degree of science in <span class="strong">cyber security</span>. I specialize in</p>
                     <ul>
-                        <li>Cyber Security Engineering</li>
+                        <li>Computer Security Engineering</li>
                         <li>Software Engineering</li>
                         <li>Development, Security and Operations</li>
                         <li>Security Research</li>
@@ -69,9 +69,9 @@
                 </section>
                 <h2>Current Work</h2>
                 <section>
-                    <p>Momentarily working for <a href="https://www.ionos.cloud/">1&1 IONOS Cloud</a>, I'm deeply immersed in cloud security topics and related technologies and tools.</p>
-                    <p>Collaborating across different teams, my daily work consists of <span class="strong">engineering custom-made automated solutions for security purposes</span>. These are integrated into CI/CD pipeline, to secure infrastructure, support SSDLC, and satisfy compliance requirements.</p>
-                    <p>On the daily basis I mainly utilize <span class="strong">Golang</span>, <span class="strong">Kubernetes</span>, <span class="strong">Docker</span>, and <span class="strong">Kali Linux</span>'s tool arsenal.</p>
+                    <p>Momentarily working at <a href="https://www.ionos.cloud/">[1&1 IONOS Cloud]</a>, I'm deeply immersed in cloud security topics and related technologies and tools.</p>
+                    <p>Collaborating across different teams, my daily work consists of <span class="strong">engineering custom-made automated systems for security purposes</span>. These are integrated into CI/CD pipeline, to secure infrastructure and network, support SSDLC, and satisfy compliance requirements.</p>
+                    <p>On the daily basis I mainly utilize <span class="strong">Golang</span>, <span class="strong">Shell</span>, <span class="strong">Kubernetes</span>, <span class="strong">Docker</span>, and <span class="strong">Kali Linux</span>'s tool arsenal.</p>
                 </section>
                 <h2>Adding Business Value</h2>
                 <section>
@@ -85,9 +85,9 @@
                 <section>
                 <h2>Contact</h2>
                 <section>
-                    <p>For business related inquiries, please send me an <a href="mailto:jerenkotomi@gmail.com">Email</a> or contact me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">LinkedIn</a>.</p>
-                    <p>Check out my <a href="https://github.com/tomijerenko/" target="_blank">GitHub</a> profile. You're welcome to pull, fork, modify, or criticize my code.</p>
-                    <p>For personal matters, hit me up on <a href="https://www.facebook.com/tomijerenko/" target="_blank">Facebook</a> or send memes on <a href="https://www.instagram.com/tomijerenko/" target="_blank">Instagram</a>. I also use Signal, Telegram, and WhatsApp. Please request my number through any of the mentioned channels.</p>
+                    <p>For business related inquiries, please send me an <a href="mailto:jerenkotomi@gmail.com">[Email]</a> or contact me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">[LinkedIn]</a>.</p>
+                    <p>Check out my <a href="https://github.com/tomijerenko/" target="_blank">[GitHub]</a> profile. You're welcome to pull, fork, modify, or criticize my code.</p>
+                    <p>For personal matters, hit me up on <a href="https://www.facebook.com/tomijerenko/" target="_blank">[Facebook]</a> or send memes on <a href="https://www.instagram.com/tomijerenko/" target="_blank">[Instagram]</a>. I also use Signal, Telegram, and WhatsApp. Please request my phone number through any of the mentioned channels.</p>
                 </section>
                 <!--<section>
                     <div>[PGP-KEY]</div>
