--- a/index.html
+++ b/index.html
@@ -54,10 +54,14 @@
             </div>
             <div class="info-container">
                 <div class="heading">
-                    <h1><a href="https://tomijerenko.com/">Tomi Jerenko</a>: whoami</h1>
+                    <h1>Computers, Software, Security</h1>
+                    <p>Engineering software systems to keep the computer applications, networks and infrastructure secure, and to prevent information leaks.</p>
+                </div>
+                <section>
+                    <h1 class="no-margin-bottom"><a href="https://tomijerenko.com/">Tomi Jerenko</a>: whoami</h1>
                     <small>MEng - Master of Engineering</small></br>
                     <small>MSc* - Master of Science</small>
-                </div>
+                </section>
                 <section>
                     <p>I'm a cyber security and software engineering specialist holding an engineering master's degree in <span class="strong">business IT</span>, and a candidate for master's degree of science in <span class="strong">cyber security</span>. I specialize in</p>
                     <ul>
@@ -75,7 +79,7 @@
                 </section>
                 <h2>Adding Business Value</h2>
                 <section>
-                    <p>Being familiar with a very broad array of topics, tools and technologies, and possesing extensive academic knowledge, I'm able to solve complex problems by developing highly specialized yet simple solutions.</p>
+                    <p>Being familiar with a very broad array of topics, tools and technologies, and possessing extensive academic knowledge, I'm able to solve complex problems by developing highly specialized yet simple solutions.</p>
                     <p>Having flexible personality, I easily integrate with teams and get along with anyone, or work independently on solo projects. I'm motivated, independent, ambitious, extroverted and goal oriented person; assertive ENTJ according to Myers-Briggs.</p>
                     <p>My operating system of choice is Linux based: <span class="strong">Debian</span> and <span class="strong">Kali Linux</span>. I speak <span class="strong">Go</span>, <span class="strong">Rust</span>, <span class="strong">Shell</span>, <span class="strong">Python</span>, JavaScript, C#, C and C++.</p>
                 </section>
