--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <body>
         <div class="container">
             <div class="image-container">
-                <img src="images/me.jpg" alt="Tomi Jerenko">
+                <img src="images/me.jpg" alt="Tomi Jerenko Computer Security Software Engineer Specialist Cloud Security">
                 <div class="contact-buttons">
                     <a href="mailto:jerenkotomi@gmail.com" class="link-icon">email
                         <svg viewBox="1.5 3 15 15" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 0.86 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
