--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             vulnerability management, vulnerability research, vulnerability,
             SRE, site reliability engineering, IT security, computer security,
             information technology security, specialist">
-        <meta name="description" content="Engineering software systems to keep the computer applications, networks and infrastructure secure, and to prevent information leaks.">
+        <meta name="description" content="Engineering software systems to improve the computer application, network and infrastructure security, and to prevent information leaks.">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
@@ -33,7 +33,7 @@
     <body>
         <div class="container">
             <div class="image-container">
-                <img src="images/me.jpg" alt="Tomi Jerenko Computer Security Software Engineering Specialist Cloud Security">
+                <img src="images/me.jpg" alt="Tomi Jerenko Computer Security Software Engineering Specialist Cloud Security" title="Tomi Jerenko Computer Security Software Engineering Specialist Cloud Security">
                 <div class="contact-buttons">
                     <a href="mailto:jerenkotomi@gmail.com" class="link-icon">email
                         <svg viewBox="1.5 3 15 15" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 0.86 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
