--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Computer Security and Software Engineering | Tomi Jerenko</title>
+        <title>Tomi Jerenko: Computer, Software, Information, Security</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta lang="en" name="keywords" content="
@@ -16,12 +16,12 @@
             tor, tor network, internet anonymity, anonymity research, wifi security, wifi,
             kubernetes, docker, k8s, containerization, container security, anonymity,
             kvm, kernel virtual machine, kernel, research, security research,
-            c++, c, engineering, software engineering, scripting, shell,
-            shell coding, python scripting, backend, fullstack, BSI, ISO,
+            c++, c, engineering, software engineering, scripting, shell, data,
+            shell coding, python scripting, backend, fullstack, BSI, ISO, data security,
             vulnerability management, vulnerability research, vulnerability,
             SRE, site reliability engineering, IT security, computer security,
-            information technology security, specialist">
-        <meta name="description" content="Engineering software systems to improve the computer application, network and infrastructure security, and to prevent information leaks.">
+            information technology security, information, information security, specialist">
+        <meta name="description" content="Engineering software systems to improve the computer application, network and infrastructure security, to ensure information security.">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
@@ -33,7 +33,7 @@
     <body>
         <div class="container">
             <div class="image-container">
-                <img src="images/me.jpg" alt="Tomi Jerenko Computer Security Software Engineering Specialist Cloud Security" title="Tomi Jerenko Computer Security Software Engineering Specialist Cloud Security">
+                <img src="images/tomijerenko.jpg" alt="Tomi Jerenko Computer Software Information Cloud Security Engineering" title="Tomi Jerenko Computer Software Information Cloud Security Engineering">
                 <div class="contact-buttons">
                     <a href="mailto:jerenkotomi@gmail.com" class="link-icon">email
                         <svg viewBox="1.5 3 15 15" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 0.86 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
@@ -54,11 +54,11 @@
             </div>
             <div class="info-container">
                 <div class="heading">
-                    <h1>Computers, Software, Security</h1>
-                    <p>Engineering software systems to keep the computer applications, networks and infrastructure secure, and to prevent information leaks.</p>
+                    <h1><a href="https://tomijerenko.com/">Tomi Jerenko</a>: Computer, Software, Information, Security</h1>
+                    <p>Engineering software systems to improve the computer application, network and infrastructure security, to ensure information security.</p>
                 </div>
                 <section>
-                    <h1 class="no-margin-bottom"><a href="https://tomijerenko.com/">Tomi Jerenko</a>: whoami</h1>
+                    <h2 class="no-margin-bottom">WHOAMI</h2>
                     <small>MEng - Master of Engineering</small></br>
                     <small>MSc* - Master of Science</small>
                 </section>
