--- a/index.html
+++ b/index.html
@@ -4,23 +4,7 @@
         <title>Tomi Jerenko: Computer, Software, Information, Security</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta lang="en" name="keywords" content="
-            linux, ethical hacking, penetration testing, programming, coding,
-            vulnerability assessment, application security, analysis, hacking,
-            network security, networking, infrastructure security, infrastructure,
-            white hat, gray hat, black hat, devops, devsecops, software development,
-            tomi jerenko, tomijerenko, contact data, security, security research, certified,
-            security specialist, engineering specialist, business, IT, information technology,
-            golang, go, rust, development and operations, professional, computer science,
-            javascript, python, cloud, cloud security, kali, kali linux, debian, debian linux,
-            tor, tor network, internet anonymity, anonymity research, wifi security, wifi,
-            kubernetes, docker, k8s, containerization, container security, anonymity,
-            kvm, kernel virtual machine, kernel, research, security research,
-            c++, c, engineering, software engineering, scripting, shell, data,
-            shell coding, python scripting, backend, fullstack, BSI, ISO, data security,
-            vulnerability management, vulnerability research, vulnerability,
-            SRE, site reliability engineering, IT security, computer security,
-            information technology security, information, information security, specialist">
+        <meta lang="en" name="keywords" content="tomi, jerenko, computer, cyber, software, information, data, cloud, security, hacking">
         <meta name="description" content="Engineering software systems to improve the computer application, network and infrastructure security, to ensure information security.">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
@@ -54,16 +38,16 @@
             </div>
             <div class="info-container">
                 <div class="heading">
-                    <h1><a href="https://tomijerenko.com/">Tomi Jerenko</a>: Computer, Software, Information, Security</h1>
+                    <h1><strong>Tomi Jerenko</strong>: Computer, Software, Information, Security</h1>
                     <p>Engineering software systems to improve the computer application, network and infrastructure security, to ensure information security.</p>
                 </div>
                 <section>
-                    <h2 class="no-margin-bottom">WHOAMI</h2>
+                    <h2 class="no-margin-bottom">Whoami</h2>
                     <small>MEng - Master of Engineering</small></br>
                     <small>MSc* - Master of Science</small>
                 </section>
                 <section>
-                    <p>I'm a <strong>computer security and software engineering</strong> specialist holding an engineering master's degree in <strong>business IT</strong>, and a candidate for master's degree of science in <strong>cyber security</strong>. I specialize in</p>
+                    <p>I'm a <strong>computer security and software engineering</strong> specialist holding an engineering master's degree in business IT, and a candidate for master's degree of science in cyber security. I specialize in</p>
                     <ul>
                         <li>Computer Security Engineering</li>
                         <li>Software Engineering</li>
@@ -81,7 +65,7 @@
                 <section>
                     <p>Being familiar with a very broad array of topics, tools and technologies, and possessing extensive academic knowledge, I'm able to solve complex problems by developing highly specialized yet simple solutions.</p>
                     <p>Having flexible personality, I easily integrate with teams and get along with anyone, or work independently on solo projects. I'm motivated, independent, ambitious, extroverted and goal oriented person; assertive ENTJ according to Myers-Briggs.</p>
-                    <p>My operating system of choice is Linux based: <strong>Debian</strong> and <strong>Kali Linux</strong>. I speak <strong>Go</strong>, <strong>Rust</strong>, <strong>Shell</strong>, <strong>Python</strong>, JavaScript, C#, C and C++.</p>
+                    <p>My operating system of choice is Linux based: Debian and Kali Linux. I speak Go, Rust, Shell, Python, JavaScript, C#, C and C++.</p>
                 </section>
                 <h2>Interests</h2>
                 <section>
