--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <section>
                     <p>Momentarily working at <a href="https://www.ionos.cloud/">[1&1 IONOS Cloud]</a>, I'm deeply immersed in cloud security topics and related technologies and tools.</p>
                     <p>Collaborating across different teams, my daily work consists of <strong>engineering custom-made automated systems for cloud security purposes</strong>. These are integrated into CI/CD pipeline, to secure infrastructure and network, support SSDLC, and satisfy compliance requirements.</p>
-                    <p>On the daily basis I mainly utilize <strong>Golang</strong>, <strong>Shell</strong>, <strong>Kubernetes</strong>, <strong>Docker</strong>, and <strong>Kali Linux</strong>'s tool arsenal.</p>
+                    <p>On the daily basis I mainly utilize <strong>Go</strong>, <strong>Shell</strong>, <strong>Kubernetes</strong>, <strong>Docker</strong>, and <strong>Kali Linux</strong>'s tool arsenal.</p>
                 </section>
                 <h2>Adding Business Value</h2>
                 <section>
