--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                 <section>
                     <p>Momentarily working at <a href="https://www.ionos.cloud/">[1&1 IONOS Cloud]</a>, I'm deeply immersed in cloud security topics and related technologies and tools.</p>
                     <p>Collaborating across different teams, my daily work consists of <strong>engineering custom-made automated systems for cloud security purposes</strong>. These are integrated into CI/CD pipeline, to secure infrastructure and network, support SSDLC, and satisfy compliance requirements.</p>
-                    <p>On the daily basis I mainly utilize <strong>Go</strong>, <strong>Shell</strong>, <strong>Kubernetes</strong>, <strong>Docker</strong>, and <strong>Kali Linux</strong>'s tool arsenal.</p>
+                    <p>On the daily basis I utilize Go, <strong>Kubernetes</strong>, <strong>Docker</strong>, and Kali Linux's tool arsenal.</p>
                 </section>
                 <h2>Adding Business Value</h2>
                 <section>
                     <p>Being familiar with a very broad array of topics, tools and technologies, and possessing extensive academic knowledge, I'm able to solve complex problems by developing highly specialized yet simple solutions.</p>
                     <p>Having flexible personality, I easily integrate with teams and get along with anyone, or work independently on solo projects. I'm motivated, independent, ambitious, extroverted and goal oriented person; assertive ENTJ according to Myers-Briggs.</p>
-                    <p>My operating system of choice is Linux based: Debian and Kali Linux. I speak Go, Rust, Shell, Python, JavaScript, C#, C and C++.</p>
+                    <p>My operating system of choice is Linux based: <span class="strong">Debian</span> and <span class="strong">Kali Linux</span>. I speak <span class="strong">Go</span>, <span class="strong">Rust</span>, <span class="strong">Shell</span>, <span class="strong">Python</span>, JavaScript, C#, C and C++.</p>
                 </section>
                 <h2>Interests</h2>
                 <section>
