--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="info-container">
                 <div class="heading">
                     <h1><strong>Tomi Jerenko</strong>: Computer, Software, Information, Security</h1>
-                    <p>Engineering software systems to improve the computer application, network, infrastructure, information security.</p>
+                    <p>Tomi Jerenko: Engineering software systems to improve the computer application, network, infrastructure, information security.</p>
                 </div>
                 <section>
                     <h2 class="no-margin-bottom">Whoami</h2>
