--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta lang="en" name="keywords" content="tomi, jerenko, computer, cyber, software, information, data, cloud, security, hacking">
-        <meta name="description" content="Tomi Jerenko - Engineering software systems to improve the computer application, network and infrastructure security, to ensure information security.">
+        <meta name="description" content="Tomi Jerenko - Engineering software systems to improve the computer application, network, infrastructure, information security.">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
