--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Tomi Jerenko: Computer, Software, Information, Security</title>
+        <title>Tomi Jerenko: Computers, Software, Information, Security</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta lang="en" name="keywords" content="tomi, jerenko, computer, cyber, software, information, data, cloud, security, hacking">
-        <meta name="description" content="Tomi Jerenko - Engineering software systems to improve the computer application, network, infrastructure, information security.">
+        <meta lang="en" name="keywords" content="tomi, jerenko, computer, cyber, software, information, data, cloud, security, it">
+        <meta name="description" content="Tomi Jerenko - Engineering software systems to improve the computer application, network, infrastructure, and information security.">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
@@ -38,8 +38,8 @@
             </div>
             <div class="info-container">
                 <div class="heading">
-                    <h1><strong>Tomi Jerenko</strong>: Computer, Software, Information, Security</h1>
-                    <p>Tomi Jerenko - Engineering software systems to improve the computer application, network, infrastructure, information security.</p>
+                    <h1><strong>Tomi Jerenko</strong>: Computers, Software, Information, Security</h1>
+                    <p>Tomi Jerenko - Engineering software systems to improve the computer application, network, infrastructure, and information security.</p>
                 </div>
                 <section>
                     <h2 class="no-margin-bottom">Whoami</h2>
