--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Tomi Jerenko: Computers, Software, Information, Security</title>
+        <title>Tomi Jerenko: Information, Software, and Computer Security</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta lang="en" name="keywords" content="tomi, jerenko, computer, cyber, software, information, data, cloud, security, it">
@@ -38,7 +38,7 @@
             </div>
             <div class="info-container">
                 <div class="heading">
-                    <h1><strong>Tomi Jerenko</strong>: Computers, Software, Information, Security</h1>
+                    <h1><strong>Tomi Jerenko</strong>: Information, Software, and Computer Security</h1>
                     <p>Tomi Jerenko - Engineering software systems to improve the computer application, network, infrastructure, and information security.</p>
                 </div>
                 <section>
