--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <div class="info-container">
                 <div class="heading">
                     <h1><strong>Tomi Jerenko</strong> - Information, Software, and Computer Security</h1>
-                    <p>Tomi Jerenko - Engineering software systems to improve the computer application, network, infrastructure, and information security.</p>
+                    <p>Engineering software systems to improve the computer application, network, infrastructure, and information security.</p>
+                    <p>Tomi Jerenko GPG Key Fingerprint: <strong>5C6F C0E2 5019 9461 5FE2 A27A 8384 0BFD 832C DBC8</strong></p>
                 </div>
                 <section>
                     <h2 class="no-margin-bottom">Whoami</h2>
@@ -80,10 +81,6 @@
                     <p>Check out my <a href="https://github.com/tomijerenko/" target="_blank">[GitHub]</a> profile. You're welcome to pull, fork, modify, or criticize my code.</p>
                     <p>Send dank memes on <a href="https://www.twitter.com/tomijerenko/" target="_blank">[Twitter]</a>, <a href="https://www.facebook.com/tomijerenko/" target="_blank">[Facebook]</a> or <a href="https://www.instagram.com/tomijerenko/" target="_blank">[Instagram]</a>. I also use Signal, Telegram, and WhatsApp. Please request my phone number through any of the mentioned channels.</p>
                 </section>
-                <!--<section>
-                    <div>[PGP-KEY]</div>
-                    <div>11111111 11111111 11111111 11111111 11111111</div>
-                </section>-->
             </div>
         </div>
     </body>
