--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </section>
                 <h2>Current Work</h2>
                 <section>
-                    <p>Momentarily working at <a href="https://www.ionos.cloud/">[1&1 IONOS Cloud]</a>, I'm deeply immersed in cloud security topics and related technologies and tools.</p>
+                    <p>Momentarily working at <a href="https://www.ionos.cloud/">[1&1 IONOS]</a>, where I'm deeply immersed in cloud security topics and related technologies and tools.</p>
                     <p>Collaborating across different teams, my daily work consists of <strong>engineering custom-made automated systems for cloud security purposes</strong>. These are integrated into CI/CD pipeline, to secure infrastructure and network, support SSDLC, and satisfy compliance requirements.</p>
                     <p>On the daily basis I utilize Go, <strong>Kubernetes</strong>, <strong>Docker</strong>, and Kali Linux's tool arsenal.</p>
                 </section>
