updated blog banner

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div class="container">
-            <a class="blogbanner" href="https://blog.tomijerenko.com">[Check Out My Blog]</a>
+            <a class="blogbanner" href="https://hackingfordevs.com">[Check Out HackingForDevs.com]</a>
             <div class="image-container">
                 <img src="images/tomijerenko.jpg" alt="Tomi Jerenko Computer Software Information Cloud Security Engineering" title="Tomi Jerenko Computer Software Information Cloud Security Engineering">
                 <div class="contact-buttons">
