--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <small>MSc* - Master of Science</small>
                 </section>
                 <section>
-                    <p>I'm a <strong>computer security and software engineer</strong> and the owner of <a href="https://hackingfordevs.com/">[hackingfordevs]</a> blog, holding an engineering master's degree in business IT and a candidate for master's degree of science in cyber security. I specialize in</p>
+                    <p>I'm a <strong>computer security and software engineer</strong> and the owner of <a href="https://hackingfordevs.com/">[hackingfordevs]</a> blog, holding an engineering master's degree in business IT, and a candidate for master's degree of science in cyber security. I specialize in</p>
                     <ul>
                         <li>Computer Security Engineering</li>
                         <li>Software Engineering</li>
