--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Tomi Jerenko - Information, Software, and Computer Security</title>
+        <title>Tomi Jerenko - Cyber Security Engineer</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta lang="en" name="keywords" content="tomi, jerenko, computer, cyber, software, information, data, cloud, security, it">
-        <meta name="description" content="Tomi Jerenko - Engineering software systems to improve the computer application, network, infrastructure, and information security.">
+        <meta lang="en" name="keywords" content="tomi, jerenko, computer, software, information, cyber, security, engineer, specialist, professional">
+        <meta name="description" content="Tomi Jerenko - Engineering, auditing and hardening computer systems to improve application, network, infrastructure, and information security.">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
@@ -16,21 +16,17 @@
     </head>
     <body>
         <div class="container">
-            <a class="blogbanner" href="https://hackingfordevs.com">[check out hackingfordevs.com]</a>
             <div class="image-container">
-                <img src="images/tomijerenko.jpg" alt="Tomi Jerenko Computer Software Information Cloud Security Engineering" title="Tomi Jerenko Computer Software Information Cloud Security Engineering">
+                <img src="images/tomijerenko.jpg" alt="Tomi Jerenko Computer Software Information Cyber Security Engineer" title="Tomi Jerenko Computer Software Information Cyber Security Engineer">
                 <div class="contact-buttons">
                     <a href="mailto:jerenkotomi@gmail.com" >
                         <svg viewBox="1.5 3 15 15" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><title>Email</title><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 0.86 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
                     </a>
-                    <a href="https://github.com/tomijerenko/" target="_blank">
-                        <svg role="img" viewBox="-3 -3 30 30" xmlns="http://www.w3.org/2000/svg"><title>GitHub</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
-                    </a>
                     <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">
                         <svg role="img" viewBox="-3 -3 30 30" xmlns="http://www.w3.org/2000/svg"><title>LinkedIn</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
                     </a>
-                    <a href="https://www.twitter.com/tomijerenko/" target="_blank">
-                        <svg role="img" viewBox="-3 -3 30 30" xmlns="http://www.w3.org/2000/svg"><title>Twitter</title><path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"/></svg>
+                    <a href="https://github.com/tomijerenko/" target="_blank">
+                        <svg role="img" viewBox="-3 -3 30 30" xmlns="http://www.w3.org/2000/svg"><title>GitHub</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
                     </a>
                     <a href="https://www.t.me/tomijerenko/" target="_blank">
                         <svg role="img" viewBox="-3 -3 30 30" xmlns="http://www.w3.org/2000/svg"><title>Telegram</title><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/></svg>
@@ -39,9 +35,8 @@
             </div>
             <div class="info-container">
                 <div class="heading">
-                    <h1><strong>Tomi Jerenko</strong> - Information, Software, and Computer Security</h1>
-                    <p>Engineering software systems to improve the computer application, network, infrastructure, and information security.</p>
-                    <p>Tomi Jerenko GPG Key Fingerprint: <strong>5C6F C0E2 5019 9461 5FE2 A27A 8384 0BFD 832C DBC8</strong></p>
+                    <h1><strong>Tomi Jerenko</strong> - Cyber Security Engineer</h1>
+                    <p>Engineering, auditing and hardening computer systems to improve application, network, infrastructure, and information security.</p>
                 </div>
                 <section>
                     <h2 class="no-margin-bottom">Whoami</h2>
@@ -49,29 +44,34 @@
                     <small>MSc* - Master of Science</small>
                 </section>
                 <section>
-                    <p>I'm a <strong>computer security and software engineer</strong> and the owner of <a href="https://hackingfordevs.com/">[hackingfordevs]</a> blog, holding an engineering master's degree in business IT, and a candidate for master's degree of science in cyber security. I specialize in</p>
+                    <p>I'm a <strong>Cyber Security Engineer</strong> with developer background, holding an engineering master's degree in information and communication technologies, and a candidate for master's degree of science in cyber security. I specialize in</p>
                     <ul>
-                        <li>Computer Security Engineering</li>
+                        <li>Cyber Security Engineering</li>
                         <li>Software Engineering</li>
                         <li>Development, Security and Operations</li>
                         <li>Security Research</li>
                     </ul>
+                    <p>My operating system of choice is anything <span class="strong">Linux</span> based. I speak Go, Rust, Shell, Python, JavaScript, Ruby, C#, C and C++.</p>
                 </section>
                 <h2>Current Work</h2>
                 <section>
-                    <p>Momentarily working at <a href="https://www.ionos.cloud/">[1&1 IONOS]</a>, where I'm deeply immersed in cloud security topics and related technologies and tools.</p>
-                    <p>Collaborating across different teams, my daily work consists of <strong>engineering custom-made automated systems for cloud security purposes</strong>. These are integrated into CI/CD pipeline, to secure infrastructure and network, support SSDLC, and satisfy compliance requirements.</p>
-                    <p>On the daily basis I utilize Go, <strong>Kubernetes</strong>, <strong>Docker</strong>, and Kali Linux's tool arsenal.</p>
+                    <p>Having moved to FinTech industry, I'm currently employed at <a href="https://www.solarisbank.com/en/">[Solarisbank]</a> and responsible for the security related topics of <a href="https://www.solarisdigitalassets.com/en/">[Solaris Digital Assets]</a> platform.</p>
+                    <p>Collaborating with various teams, my daily tasks aim to assure frontline security and prevent insider threats, by the means of:</p>
+                        <ul>
+                            <li>Auditing security designs of infrastructure and API services</li>
+                            <li>Hardening infrastructure and its components</li>
+                            <li>Crafting automated auditing and monitoring tools</li>
+                            <li>Crafting security related infrastructure and applications</li>
+                        </ul>
                 </section>
                 <h2>Adding Business Value</h2>
                 <section>
                     <p>Being familiar with a very broad array of topics, tools and technologies, and possessing extensive academic knowledge, I'm able to solve complex problems by developing highly specialized yet simple solutions.</p>
-                    <p>Having flexible personality, I easily integrate with teams and get along with anyone, or work independently on solo projects. I'm motivated, independent, ambitious, extroverted and goal oriented person; assertive ENTJ according to Myers-Briggs.</p>
-                    <p>My operating system of choice is Linux based: <span class="strong">Debian</span> and <span class="strong">Kali Linux</span>. I speak <span class="strong">Go</span>, <span class="strong">Rust</span>, <span class="strong">Shell</span>, Python, JavaScript, C#, C and C++.</p>
+                    <p>Having flexible personality, I easily integrate with teams and get along with anyone, or work independently on solo projects. I'm motivated, independent, ambitious, extroverted and goal oriented person; <a href="https://www.16personalities.com/entj-personality">[ENTJ-A]</a> according to Myers-Briggs.</p>
                 </section>
                 <h2>Interests</h2>
                 <section>
-                    Besides IT, I'm interested in psychoanalysis and philosophy, languages, and adrenaline sports.
+                    Besides IT, I'm interested in psychoanalysis and philosophy, languages, and adrenaline sports. Just recently, I picked up an appreciation for German Romanticism.
                 <section>
                 <h2>Contact</h2>
                 <section>
