--- a/index.html
+++ b/index.html
@@ -35,15 +35,10 @@
             </div>
             <div class="info-container">
                 <div class="heading">
-                    <h1><strong>Tomi Jerenko</strong> - Cyber Security Engineer</h1>
-                    <p>Engineering, auditing and hardening computer systems to improve application, network, infrastructure, and information security.</p>
-                </div>
-                <section>
-                    <h2 class="no-margin-bottom">Whoami</h2>
+                    <h1 class="no-margin-bottom"><strong>Tomi Jerenko</strong> - Cyber Security Engineer</h1>
                     <small>MEng - Master of Engineering</small></br>
                     <small>MSc* - Master of Science</small>
-                </section>
-                <section>
+                    <p>Engineering, auditing and hardening computer systems to improve application, network, infrastructure, and information security.</p>
                     <p>I'm a <strong>Cyber Security Engineer</strong> with developer background, holding an engineering master's degree in information and communication technologies, and a candidate for master's degree of science in cyber security. I specialize in</p>
                     <ul>
                         <li>Cyber Security Engineering</li>
@@ -52,10 +47,10 @@
                         <li>Security Research</li>
                     </ul>
                     <p>My operating system of choice is anything <span class="strong">Linux</span> based. I speak Go, Rust, Shell, Python, JavaScript, Ruby, C#, C and C++.</p>
-                </section>
+                </div>
                 <h2>Current Work</h2>
                 <section>
-                    <p>Having moved to FinTech industry, I'm currently employed at <a href="https://www.solarisbank.com/en/">[Solarisbank]</a> and responsible for the security related topics of <a href="https://www.solarisdigitalassets.com/en/">[Solaris Digital Assets]</a> platform.</p>
+                    <p>Having moved to FinTech industry, I'm currently employed at <a href="https://www.solarisbank.com/en/">[Solarisbank]</a> and responsible for the security topics of <a href="https://www.solarisdigitalassets.com/en/">[Solaris Digital Assets]</a> platform.</p>
                     <p>Collaborating with various teams, my daily tasks aim to assure frontline security and prevent insider threats, by the means of:</p>
                         <ul>
                             <li>Auditing security designs of infrastructure and API services</li>
