--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Tomi Jerenko - Cyber Security Engineer</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta lang="en" name="keywords" content="tomi, jerenko, computer, software, information, cyber, security, engineer, specialist, professional">
-        <meta name="description" content="Tomi Jerenko - Engineering, auditing and hardening computer systems to improve application, network, infrastructure, and information security.">
+        <meta lang="en" name="keywords" content="tomi, jerenko, cyber, security, engineer, application, network, infrastructure, specialist, professional">
+        <meta name="description" content="Tomi Jerenko - Engineering, auditing and hardening of enterprise cyber systems to improve application, network and infrastructure security.">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
@@ -17,7 +17,7 @@
     <body>
         <div class="container">
             <div class="image-container">
-                <img src="images/tomijerenko.jpg" alt="Tomi Jerenko Computer Software Information Cyber Security Engineer" title="Tomi Jerenko Computer Software Information Cyber Security Engineer">
+                <img src="images/tomijerenko.jpg" alt="Tomi Jerenko Cyber Security Engineer" title="Tomi Jerenko Cyber Security Engineer">
                 <div class="contact-buttons">
                     <a href="mailto:jerenkotomi@gmail.com" >
                         <svg viewBox="1.5 3 15 15" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><title>Email</title><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 0.86 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
@@ -38,20 +38,15 @@
                     <h1 class="no-margin-bottom"><strong>Tomi Jerenko</strong> - Cyber Security Engineer</h1>
                     <small>MEng - Master of Engineering</small></br>
                     <small>MSc* - Master of Science</small>
-                    <p>Engineering, auditing and hardening computer systems to improve application, network, infrastructure, and information security.</p>
-                    <p>I'm a <strong>Cyber Security Engineer</strong> with developer background, holding an engineering master's degree in information and communication technologies, and a candidate for master's degree of science in cyber security. I specialize in</p>
-                    <ul>
-                        <li>Cyber Security Engineering</li>
-                        <li>Software Engineering</li>
-                        <li>Development, Security and Operations</li>
-                        <li>Security Research</li>
-                    </ul>
+                    
+                    <p>I'm a <strong>Cyber Security Engineer</strong> with developer background, holding an engineering master's degree in information and communication technologies, and a candidate for master's degree of science in cyber security.</p>
+                    <p>Specializing in engineering, auditing and hardening of enterprise cyber systems to improve application, network, and infrastructure security.</p>
                     <p>My operating system of choice is anything <span class="strong">Linux</span> based. I speak Go, Rust, Shell, Python, JavaScript, Ruby, C#, C and C++.</p>
                 </div>
                 <h2>Current Work</h2>
                 <section>
-                    <p>Having moved to FinTech industry, I'm currently employed at <a href="https://www.solarisbank.com/en/">[Solarisbank]</a> and responsible for the security topics of <a href="https://www.solarisdigitalassets.com/en/">[Solaris Digital Assets]</a> platform.</p>
-                    <p>Collaborating with various teams, my daily tasks aim to assure frontline security and prevent insider threats, by the means of:</p>
+                    <p>Having moved to the FinTech industry, I'm currently employed at <a href="https://www.solarisbank.com/en/">[Solarisbank]</a> where and responsible for security topics of <a href="https://www.solarisdigitalassets.com/en/">[Solaris Digital Assets]</a> platform.</p>
+                    <p>Collaborating with various teams, my daily tasks aim to assure frontline security and prevent insider threats, by the means of</p>
                         <ul>
                             <li>Auditing security designs of infrastructure and API services</li>
                             <li>Hardening infrastructure and its components</li>
@@ -62,7 +57,7 @@
                 <h2>Adding Business Value</h2>
                 <section>
                     <p>Being familiar with a very broad array of topics, tools and technologies, and possessing extensive academic knowledge, I'm able to solve complex problems by developing highly specialized yet simple solutions.</p>
-                    <p>Having flexible personality, I easily integrate with teams and get along with anyone, or work independently on solo projects. I'm motivated, independent, ambitious, extroverted and goal oriented person; <a href="https://www.16personalities.com/entj-personality">[ENTJ-A]</a> according to Myers-Briggs.</p>
+                    <p>Having a flexible personality, I easily integrate with teams and get along with anyone, or work independently on solo projects. I'm a motivated, independent, ambitious, extroverted and goal oriented person; <a href="https://www.16personalities.com/entj-personality">[ENTJ-A]</a> according to Myers-Briggs.</p>
                 </section>
                 <h2>Interests</h2>
                 <section>
@@ -70,7 +65,7 @@
                 <section>
                 <h2>Contact</h2>
                 <section>
-                    <p>For business related inquiries and other imporant matters, please send me an <a href="mailto:jerenkotomi@gmail.com">[Email]</a> or contact me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">[LinkedIn]</a>.</p>
+                    <p>For business related inquiries and other important matters, please send me an <a href="mailto:jerenkotomi@gmail.com">[Email]</a> or contact me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">[LinkedIn]</a>.</p>
                     <p>Check out my <a href="https://github.com/tomijerenko/" target="_blank">[GitHub]</a> profile. You're welcome to pull, fork, modify, or criticize my code.</p>
                 </section>
             </div>
