--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta lang="en" name="keywords" content="tomi, jerenko, cyber, security, engineer, application, network, infrastructure, specialist, professional">
-        <meta name="description" content="Tomi Jerenko - Engineering, auditing and hardening of enterprise cyber systems to improve application, network and infrastructure security.">
+        <meta name="description" content="Tomi Jerenko - Engineering, auditing and hardening of enterprise cyber systems to improve application, network, infrastructure and information security.">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
@@ -40,7 +40,7 @@
                     <small>MSc* - Master of Science</small>
                     
                     <p>I'm a <strong>Cyber Security Engineer</strong> with developer background, holding an engineering master's degree in information and communication technologies, and a candidate for master's degree of science in cyber security.</p>
-                    <p>Specializing in engineering, auditing and hardening of enterprise cyber systems to improve application, network, and infrastructure security.</p>
+                    <p>Specializing in engineering, auditing and hardening of enterprise cyber systems to improve application, network, infrastructure and information security.</p>
                     <p>My operating system of choice is anything <span class="strong">Linux</span> based. I speak Go, Rust, Shell, Python, JavaScript, Ruby, C#, C and C++.</p>
                 </div>
                 <h2>Current Work</h2>
