--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <h2>Current Work</h2>
                 <section>
-                    <p>Having moved to the FinTech industry, I'm currently employed at <a href="https://www.solarisbank.com/en/">[Solarisbank]</a> where and responsible for security topics of <a href="https://www.solarisdigitalassets.com/en/">[Solaris Digital Assets]</a> platform.</p>
+                    <p>Having moved to the FinTech industry, I'm currently employed at <a href="https://www.solarisbank.com/en/">[Solarisbank]</a> and responsible for security topics of <a href="https://www.solarisdigitalassets.com/en/">[Solaris Digital Assets]</a> platform.</p>
                     <p>Collaborating with various teams, my daily tasks aim to assure frontline security and prevent insider threats, by the means of</p>
                         <ul>
                             <li>Auditing security designs of infrastructure and API services</li>
