--- a/index.html
+++ b/index.html
@@ -38,17 +38,14 @@
             </div>
             <div class="info-container">
                 <div class="heading">
-                    <h1 class="no-margin-bottom"><strong>Tomi Jerenko</strong> - Cyber Security Engineer</h1>
-                    <small>MEng - Master of Engineering</small></br>
-                    <small>MSc* - Master of Science</small>
-                    
-                    <p>I'm a <strong>Cyber Security Engineer</strong> with developer background, holding an engineering master's degree in information and communication technologies, and a candidate for master's degree of science in cyber security.</p>
-                    <p>Specializing in engineering, auditing and hardening of enterprise cyber systems to improve application, network, infrastructure and information security.</p>
+                    <h1><strong>Tomi Jerenko</strong> - Cyber Security Engineer</h1>
+                    <p><strong>Cyber Security Engineer</strong> specializing in engineering, auditing and hardening of enterprise cyber systems to improve application, network, infrastructure and information security.</p>
+                    <p>Possessing developer background, I hold an engineering master's degree in information and communication technologies, and am a candidate for master's degree of science in cyber security.</p>
                     <p>My operating system of choice is anything <span class="strong">Linux</span> based. I speak Go, Rust, Shell, Python, JavaScript, Ruby, C#, C and C++.</p>
                 </div>
                 <h2>Current Work</h2>
                 <section>
-                    <p>Having moved to the FinTech industry, I'm currently employed at <a href="https://www.solarisbank.com/en/">[Solarisbank]</a> and responsible for security topics of <a href="https://www.solarisdigitalassets.com/en/">[Solaris Digital Assets]</a> platform.</p>
+                    <p>Currently working in the FinTech industry at <a href="https://www.solarisbank.com/en/">[Solarisbank]</a>, where I'm responsible for the security of <a href="https://www.solarisdigitalassets.com/en/">[Solaris Digital Assets]</a> platform.</p>
                     <p>Collaborating with various teams, my daily tasks aim to assure frontline security and prevent insider threats, by the means of</p>
                         <ul>
                             <li>Auditing security designs of infrastructure and API services</li>
@@ -60,7 +57,7 @@
                 <h2>Adding Business Value</h2>
                 <section>
                     <p>Being familiar with a very broad array of topics, tools and technologies, and possessing extensive academic knowledge, I'm able to solve complex problems by developing highly specialized yet simple solutions.</p>
-                    <p>Having a flexible personality, I easily integrate with teams and get along with anyone, or work independently on solo projects. I'm a motivated, independent, ambitious, extroverted and goal oriented person; <a href="https://www.16personalities.com/entj-personality">[ENTJ-A]</a> according to Myers-Briggs.</p>
+                    <p>Having a flexible personality, I easily integrate with teams and get along with anyone, or work independently on solo projects. I'm a motivated, ambitious, extroverted and goal oriented person; <a href="https://www.16personalities.com/entj-personality">[ENTJ-A]</a> according to Myers-Briggs.</p>
                 </section>
                 <h2>Interests</h2>
                 <section>
